--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <div id="form ">  <form >
-      <h1>  LENGHT (a)</h1>
+      <p>  LENGHT (a)</p>
         <input type="number" id="a" value="">
-      <h1> LENGTH (b)</h1>
+      <p> LENGTH (b)</p>
         <input type="number" id="b" value="">
-      <h1>  LENGTH (c)</h1>
-        <input type="number" id="c" value="">
-        <button type="button" name="button" onclick="tracker()">TRACK</button>
-        <button type="reset" name="button">RESET</button>
+      <p>  LENGTH (c)</p>
+        <input type="number" id="c" value=""><br><br>
+        <button class="button" type="button" name="button" onclick="tracker()">TRACK</button><br><br>
+        <button class="button" type="reset" name="button">RESET</button><br><br>
       </form>
       </div>
         <p id="result"></p>
