--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <p>  Length c</p>
         <input type="number" id="c" value=""><br><br>
     <div id="move">
-      <button class="button" type="button" name="button" onclick="tracker()"><img src="https://cdn.dribbble.com/users/100346/screenshots/4049150/checkmark.gif" alt="CHECK" width=50 height=40></button><br><br>
+      <button class="button" type="button" name="button" onclick="tracker()">CHECK</button><br><br>
 
-        <button class="button" type="reset" name="button"><img src="https://cdn.dribbble.com/users/2024706/screenshots/4520414/reload.gif" alt="REFRESH" width=50 height=40 ></button><br><br></div>
+        <button class="button" type="reset" name="button">REFRESH</button><br><br></div>
       </form>
       </div>
       <br><br>
-      <br><br>
 
+    
       <p id="result"></p>
       <script type="text/javascript" src="javascript.js"></script>
   </body>
