--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </div>
       <br><br>
 
-    
-      <p id="result"></p>
+
+    <span><P id="result"></p></span>
       <script type="text/javascript" src="javascript.js"></script>
   </body>
 </html>
